name:                agda2html
version:             0.1.0.3
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/agda2html#readme
license:             BSD3
license-file:        LICENSE
author:              Wen Kokke
maintainer:          wen.kokke@gmail.com
copyright:           2016 Wen Kokke
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base               >= 4.7  && < 5
                     , directory          >= 1.2  && < 2
                     , directory-tree     >= 0.12 && < 1
                     , filepath           >= 1.0  && < 2
                     , process            >= 1.2  && < 2
                     , temporary          >= 1.0  && < 2
                     , text               >= 1.2  && < 2
                     , text-icu           >= 0.7  && < 1
                     , text-regex-replace >= 0.1  && < 1
  default-language:    Haskell2010

executable agda2html
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       agda2html
                     , aeson              >= 1.2 && < 2
                     , base               >= 4.7 && < 5
                     , directory          >= 1.3 && < 2
                     , filepath           >= 1.0 && < 2
                     , Glob               >= 0.9 && < 1
                     , http-conduit       >= 2.3 && < 3
                     , text               >= 1.2 && < 2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/agda2html
