name:                agda2html
version:             0.2.4.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/wenkokke/agda2html#readme
license:             LGPL
license-file:        LICENSE
author:              Wen Kokke
maintainer:          wen.kokke@gmail.com
copyright:           2016 Wen Kokke
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.2
                     , directory-tree >= 0.12
                     , filepath >= 1.0
                     , process >= 1.2
                     , split >= 0.2
                     , temporary >= 1.0
                     , text >= 1.2
                     , text-icu >= 0.6
                     , text-regex-replace >= 0.1
  default-language:    Haskell2010

executable agda2html
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_agda2html
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       agda2html
                     , base
                     , directory >= 1.2
                     , filepath >= 1.0
                     , text >= 1.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wenkokke/agda2html
